--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.json",
   "license": "MIT",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
