--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@omariosouto/tsconfig",
-  "version": "1.0.0",
+  "version": "1.0.4",
   "main": "index.json",
   "license": "MIT",
+  "repository":"https://github.com/omariosouto/tsconfig",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
   },
