--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@omariosouto/tsconfig",
-  "version": "1.0.4",
+  "version": "1.0.5-beta20254121744459935PR1",
   "main": "index.json",
   "license": "MIT",
-  "repository":"https://github.com/omariosouto/tsconfig",
+  "repository": "https://github.com/omariosouto/tsconfig",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
   },
