--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "release-bot": "node ./lib",
     "dev:release-bot": "npx nodemon ./lib",
     "build": "echo 'I need to build the library...'",
+    "publish:version": "echo 'I need to publish version to registry'",
     "example": "npm exec --workspace=example-nextjs",
     "dev:example": "npm run example -- npm run dev",
     "lib": "npm exec --workspace=@omariosouto/tsconfig",
