--- a/package.json
+++ b/package.json
@@ -10,12 +10,10 @@
   "scripts": {
     "release-bot": "node ./lib",
     "dev:release-bot": "npx nodemon ./lib",
-    "build": "echo 'I need to build the library...'",
-    "publish:version": "echo 'I need to publish version to registry'",
     "example": "npm exec --workspace=example-nextjs",
     "dev:example": "npm run example -- npm run dev",
     "lib": "npm exec --workspace=@omariosouto/tsconfig",
-    "publish-release": "npm run lib -- npm publish"
+    "build": "echo 'I need to build the library...'"
   },
   "keywords": [],
   "author": "",
