--- a/.github/workflows/bumper.yml
+++ b/.github/workflows/bumper.yml
@@ -1,24 +1,22 @@
 name: Bumper
+
 on:
   issue_comment:
     types: [created]
 
 jobs:
   on-pr-comment:
-    # Only run if the comment is on a pull request
+    # Only run if the new comment is on a pull request
     if: ${{ github.event.issue.pull_request }}
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Check out your repository so you can run your script
       - name: Check out repository
         uses: actions/checkout@v3
 
-      # Step 2: Install dependencies (assuming your Node.js project uses package.json)
       - name: Install dependencies
         run: npm ci
 
-      # Step 3: Run your script
       - name: Run library script
         run: node ./lib.js
         env:
