--- a/.github/workflows/bumper.yml
+++ b/.github/workflows/bumper.yml
@@ -20,7 +20,10 @@ jobs:
 
       # Step 3: Run your script
       - name: Run library script
-        run: npm run bumper
+        run: | 
+          git config --global user.email "contato@mariosouto.com"
+          git config --global user.name "Bumper"
+          npm run bumper
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PR_NUMBER: ${{ github.event.issue.number }}
