--- a/.github/workflows/bumper.yml
+++ b/.github/workflows/bumper.yml
@@ -6,19 +6,26 @@ on:
 
 jobs:
   on-pr-comment:
-    # Only run if the new comment is on a pull request
     if: ${{ github.event.issue.pull_request }}
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check out repository
+      - name: Check out PR branch
         uses: actions/checkout@v3
+        with:
+          # Use the fork’s repo/branch if needed:
+          repository: ${{ github.event.issue.pull_request.head.repo.full_name }}
+          # This is the branch name of the PR:
+          ref: ${{ github.event.issue.pull_request.head.ref }}
 
       - name: Install dependencies
         run: npm ci
 
       - name: Run library script
-        run: node ./lib.js
+        run: | 
+          git config --global user.email "contato@mariosouto.com"
+          git config --global user.name "Bumper"
+          npm run bumper
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PR_NUMBER: ${{ github.event.issue.number }}
