--- a/.github/workflows/bumper.yml
+++ b/.github/workflows/bumper.yml
@@ -56,3 +56,4 @@ jobs:
           PR_NUMBER: ${{ github.event.issue.number }}
           PR_COMMENT: ${{ github.event.comment.body }}
           GH_REGISTRY_TOKEN: ${{ secrets.GH_REGISTRY_TOKEN }}
+          BRANCH_NAME: ${{ env.BRANCH_NAME }}
