--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,42 +4,15 @@ on:
   pull_request:
     types: [opened, synchronize]
 
-permissions:
-  contents: write
-  pull-requests: write
-  issues: write
-
 jobs:
-  check-commit:
-    runs-on: ubuntu-latest
-    outputs:
-      skip_ci: ${{ steps.detect-skip-ci.outputs.skip_ci }}
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v3
-
-      - name: Detect [skip-ci] in commit message
-        id: detect-skip-ci
-        run: |
-          COMMIT_MSG=$(git log -1 --pretty=%B)
-          # If '[skip-ci]' is in the latest commit message, we will mark skip_ci=true
-          if echo "$COMMIT_MSG" | grep -qi '\[skip-ci\]'; then
-            echo "skip_ci=true" >> $GITHUB_OUTPUT
-          else
-            echo "skip_ci=false" >> $GITHUB_OUTPUT
-          fi
-
   test:
     runs-on: ubuntu-latest
-    needs: [check-commit]
-    # Skip the entire job if skip_ci == 'true'
-    if: ${{ needs.check-commit.outputs.skip_ci != 'true' }}
     steps:
+      # [Common CI/CD Setup]
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v4
-
-      - name: Install Dependencies
-        run: npm ci
-
-      - name: Test
-        run: npm run test
+      # ====================
+      - name: "Install Dependencies"
+        run: "npm ci"
+      - name: "Test"
+        run: "npm run test"
