Commiting 1.13.8-beta20254121744501648PR10 - 2025-4-12

--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@omariosouto/tsconfig",
-  "version": "1.13.7",
+  "version": "1.13.8-beta20254121744501648PR10",
   "main": "index.json",
   "license": "MIT",
   "repository": "https://github.com/omariosouto/tsconfig",
