--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "packages/*"
   ],
   "scripts": {
-    "bumper": "node ./lib",
-    "dev:bumper": "npx nodemon ./lib",
+    "bumper": "npm_config_registry=https://npm.pkg.github.com npx omariosouto-bumper",
     "example": "npm exec --workspace=example-nextjs",
     "dev:example": "npm run example -- npm run dev",
     "lib": "npm exec --workspace=@omariosouto/tsconfig",
