Commiting 1.13.9-beta20254131744511512PR12 - 2025-4-13

--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@omariosouto/tsconfig",
-  "version": "1.13.8",
+  "version": "1.13.9-beta20254131744511512PR12",
   "main": "index.json",
   "license": "MIT",
   "repository": "https://github.com/omariosouto/tsconfig",
