--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@omariosouto/tsconfig",
-  "version": "1.13.11",
+  "version": "2.0.0-beta20254131744576166PR15",
   "main": "index.json",
   "license": "MIT",
   "repository": "https://github.com/omariosouto/tsconfig",
