--- a/packages/lib/config.json
+++ b/packages/lib/config.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     // Target and module settings
-    "target": "ESNext"
+    "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "bundler",
     "lib": ["ESNext", "DOM"],
