--- a/packages/lib/config.json
+++ b/packages/lib/config.json
@@ -14,6 +14,7 @@
     "noImplicitAny": true,
     "noImplicitThis": true,
     "useUnknownInCatchVariables": true,  // Makes catch variables unknown by default
+    "noUncheckedIndexedAccess": true,
 
     // Linting-like checks
     "noUnusedLocals": true,
